tests/error/func_non.gw
#! [contains] non-callable value
1();
